--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -1,17 +1,17 @@
-@import '../lib/colors';
+@import "../lib/colors";
 @import '../lib/bootstrap/scss/bootstrap-grid';
 
 .homework {
-  width: 100%;
-  list-style: none;
+  clear: both;
   margin: 0;
   padding: 10px 0;
-  clear: both;
+  width: 100%;
+  list-style: none;
 }
 .assignment {
-  width: 100%;
   position: relative;
   padding: 10px;
+  width: 100%;
   text-decoration: none;
   a {
     color: #373a3c;
@@ -23,17 +23,17 @@
   .dates {
     float: right;
     text-align: right;
-    color: grey;
+    color: #808080;
   }
   &.has-stats{
     min-height: 165px;
   }
   .state {
+    position: relative;
     float: right;
-    text-align: right;
     clear: right;
-    color: grey;
-    position:relative;
+    text-align: right;
+    color: #808080;
   }
   &.private {
     h5::before {
@@ -47,34 +47,34 @@
   .description {
     margin: 10px 0;
     min-height: 50px;
+    text-decoration: none;
     color: #373a3c;
-    text-decoration:none;
-    &:hover{text-decoration:none;}
-    word-break: break-all;
+    &:hover{text-decoration: none;}
     word-break: break-word;
+    word-break: break-all;
     @include media-breakpoint-down(xs) {
       margin-right: 25px;
     }
-    h1 {font-size: 1.3rem;font-weight:bold}
-    h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
-    h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
-    p  {font-size: 1rem;margin-bottom:.25rem;}
+    h1 {font-size: 1.3rem;font-weight: bold}
+    h2 {font-size: 1.2rem;font-weight: bold;font-style: italic}
+    h3 {text-decoration: underline;font-size: 1.1rem;font-style: italic}
+    p  {margin-bottom: .25rem;font-size: 1rem;}
     a  {text-decoration: underline; color: $primaryColor;}
     blockquote{
-      color: grey;
       margin-left: 1rem;
-      border-left: 2px solid grey;
+      border-left: 2px solid #808080;
       padding-left: 5px;
+      color: #808080;
     }
   }
   .more {
     position: absolute;
     right: 10px;
     bottom: 5px;
-    padding: 5px 0 5px 10px;
     clear: both;
+    padding: 5px 0 5px 10px;
     text-align: right;
-    color: $primaryColor;
     text-decoration: none;
+    color: $primaryColor;
   }
 }
