--- a/static/styles/imprint/imprint.scss
+++ b/static/styles/imprint/imprint.scss
@@ -1,12 +1,12 @@
-@import '../lib/colors';
+@import "../lib/colors";
 .section-imprint {
     padding-top: 5px;
     strong {
       font-weight: bold;
     }
     ul {
+      margin: 5px 5px 5px 40px !important;
+      padding: 0 0 5px 0 !important;
       list-style-type: disc !important;
-      padding: 0 0 5px 0!important;
-      margin: 5px 5px 5px 40px!important;
     }
 }
