--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -1,16 +1,16 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 .section-about {
   hgroup {
-    text-align: center;
-    font-weight: bold;
     margin: 60px 0 60px;
     width: 100%;
+    text-align: center;
+    font-weight: bold;
   }
 
   .section-title {
-    width: 100%;
     padding: 10px 0 20px;
+    width: 100%;
     line-height: 1.75rem;
   }
 }
@@ -19,18 +19,18 @@
   padding-left: 0;
 
   .viewer {
+    margin: 0 0 0 15px;
     width: 97%;
     height: 700px;
-    margin: 0 0 0 15px;
   }
   div.row {
     margin-bottom: 10px;
   }
   .single-pdf {
     margin: 0 15px 15px;
-    padding: 3px 6px 3px 6px;
     border: 1px solid #d3d3d3;
     box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+    padding: 3px 6px 3px 6px;
     &.opened {
       border: 1px solid #b10438;
     }
