--- a/static/styles/calendar/calendar.scss
+++ b/static/styles/calendar/calendar.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 .route-calendar {
     .fullcalendar {
@@ -6,15 +6,15 @@
         width: 100%;
 
         h2 {
+            line-height: 30px;
             font-size: 20px;
             font-weight: 800;
-            line-height: 30px;
         }
 
         .fc-event {
-            border: 0px;
-            color: #646464;
+            border: 0;
             background: #e9e9e9;
+            color: #646464;
 
             .fc-content {
                 padding: 5px;
@@ -42,12 +42,12 @@
                     border-bottom: 6px solid $primaryColor;
 
                     &:after {
-                        color: $primaryColor;
-                        content: attr(data-status);
-                        bottom: 5px;
-                        right: 10px;
                         position: absolute;
+                        right: 10px;
+                        bottom: 5px;
+                        color: $primaryColor;
                         font-weight: 600;
+                        content: attr(data-status);
                     }
                 }
             }
@@ -55,43 +55,43 @@
     }
 
     .fc-state-default {
-        text-shadow: none;
-        box-shadow: none;
-        color: #292b2c;
-        background: #fff;
         border-color: #ccc;
+        box-shadow: none;
+        background: #fff;
+        text-shadow: none;
+        color: #292b2c;
     }
 
     .fc-state-hover,
     .fc-state-down,
     .fc-state-active,
     .fc-state-disabled {
-        color: #292b2c;
         background-color: #e6e6e6;
+        color: #292b2c;
     }
 
     .fc-state-hover {
-        color: #292b2c;
-        background: #e6e6e6;
-        -webkit-transition: background-position 0.1s linear;
-        -moz-transition: background-position 0.1s linear;
-        -o-transition: background-position 0.1s linear;
         transition: none;
+        background: #e6e6e6;
+        color: #292b2c;
+        -o-transition: background-position 0.1s linear;
+        -moz-transition: background-position 0.1s linear;
+        -webkit-transition: background-position 0.1s linear;
     }
 
     .fc-state-down,
     .fc-state-active {
-        color: #292b2c;
-        background: #e6e6e6;
         border-color: #adadad;
+        background: #e6e6e6;
+        color: #292b2c;
     }
 
     .fc-state-disabled {
-        cursor: default;
         opacity: 1;
+        border-color: #ccc;
         box-shadow: none;
         background: #fff;
-        border-color: #ccc;
+        cursor: default;
     }
 }
 
@@ -100,19 +100,19 @@
         margin-right: 0.5rem;
     }
     .toggle {
-        height: 2rem !important;
         width: 7rem !important;
+        height: 2rem !important;
         .toggle-handle {
+            background: #f5f5f5 !important;
             width: 0.3rem !important;
-            background: whitesmoke !important;
         }
     }
 
     .off {
-        background: grey !important;
+        background: #808080 !important;
         label {
-            color: whitesmoke !important;
             padding-left: 48px !important;
+            color: #f5f5f5 !important;
         }
     }
 
