--- a/static/styles/classes/classes.scss
+++ b/static/styles/classes/classes.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 @import "../lib/bootstrap/scss/bootstrap-flex";
 
 .section-classes {
@@ -7,8 +7,8 @@
   }
 
   .lesson-date {
-    line-height: 24px;
     float: right;
+    line-height: 24px;
   }
 
   .description {
