--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 .store.container {
     margin: 0;
@@ -41,31 +41,31 @@ h1, h3 {
     cursor: pointer;
 }
 .card-img-overlay {
-    color: $primaryColor;
-    padding: 10px;
     bottom: auto;
     z-index: 10;
+    padding: 10px;
+    color: $primaryColor;
     font-weight: bold;
 }
 .card-img-overlay:before {
-    content: "";
     position: absolute;
     top: 0;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
-    background: lightgrey;
     opacity: 0.7;
     z-index: -1;
+    background: #d3d3d3;
+    content: "";
 }
 .card-title {
     margin-bottom: 10px;
     word-wrap: break-word;
 }
 .card-tags {
+    margin-bottom: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-bottom: 10px;
 }
 .tag {
     max-width: 100%;
@@ -74,8 +74,8 @@ h1, h3 {
     word-wrap: break-word;
 }
 .tooltip-inner {
-  color: white ;
-  background-color: $primaryColor;
+  background-color: $primaryColor ;
+  color: #fff;
 }
 .tooltip-arrow{
   background-color: $primaryColor;
@@ -90,5 +90,5 @@ h1, h3 {
   position: absolute;
   top: -34px;
   right: 18px;
-  color: lightgrey;
+  color: #d3d3d3;
 }
