--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 @import url('https://vjs.zencdn.net/5.19.2/video-js.css');
 @import "./upload";
 
@@ -8,29 +8,29 @@
   }
 
   h5 {
-    width: auto;
     float: left;
+    width: auto;
   }
 }
 
 .directories {
-  width: 100%;
   float: left;
+  width: 100%;
 
   .container-fluid {
     padding-left: 0;
   }
 
   h5 {
+    padding: 10px 0 20px;
     color: $primaryColor;
-    padding: 10px 0px 20px;
   }
 
   .card.folder {
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
     &:hover {
-      box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
       background: #f9f9f9;
       cursor: pointer;
     }
@@ -53,18 +53,18 @@
 .lightbox {
   display: none;
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 999;
+  background: rgba(0, 0, 0, 0.8);
   width: 100%;
   height: 100%;
   text-align: center;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.8);
   .link {
-    color: white;
-    font-size: 30px;
     position: absolute;
     margin-top: 30%;
+    color: #fff;
+    font-size: 30px;
   }
   .video-js {
     margin: 2% auto;
@@ -78,25 +78,25 @@
 }
 
 .lightbox img {
+  margin-top: 2%;
+  background: #fff;
   max-width: 90%;
   max-height: 90%;
-  margin-top: 2%;
-  background: white;
 }
 
 .lightbox:target {
-  outline: none;
   display: block;
+  outline: none;
 }
 
 .files {
-  width: 100%;
   float: left;
   margin-bottom: 40px;
+  width: 100%;
 
   h5 {
+    padding: 10px 0 20px;
     color: $primaryColor;
-    padding: 10px 0px 20px;
   }
 
   .modal-body {
@@ -106,24 +106,24 @@
   }
 
   .card.file {
-    min-height: 80px;
-    color: $primaryColor;
-    text-overflow: ellipsis;
-    overflow: hidden;
     cursor: pointer;
+    min-height: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: $primaryColor;
 
     &:hover {
-      box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
       background: #f9f9f9;
     }
 
     .file-preview {
-      width: 90%;
-      height: 65px;
       float: left;
       margin-right: 5px;
       background: no-repeat center center;
       background-size: cover;
+      width: 90%;
+      height: 65px;
     }
 
     .fa {
@@ -141,11 +141,11 @@
       }
     }
     .title {
-      white-space: nowrap;
+      display: inline-block;
       width: calc(75% - 30px);
       overflow: hidden;
       text-overflow: ellipsis;
-      display: inline-block;
+      white-space: nowrap;
     }
     .file-preview {
       @media screen and (max-width: 575px) {
@@ -157,32 +157,32 @@
     }
 
     .file-location {
-      color: darkgrey;
       padding-top: 5px;
       line-height: 1;
+      color: #a9a9a9;
     }
   }
 }
 
 .new-directory {
-  width: 100%;
   float: left;
+  width: 100%;
 }
 
 .filter-options {
-  background: white;
   position: absolute;
   z-index: 5;
+  background: #fff;
   word-wrap: break-word;
   .filter-option {
     border: 1px solid rgba(0, 0, 0, .15);
     border-radius: .1rem;
-    padding: 10px 15px 10px 15px;
     cursor: pointer;
+    padding: 10px 15px 10px 15px;
   }
   .filter-option:hover {
     background-color: $primaryColor;
-    color: white;
+    color: #fff;
   }
 }
 
@@ -202,12 +202,12 @@
 
 .directories-tree {
   .dir-sub-menu {
-    background-color: #dbd7d7;
     display: none;
+    background-color: #dbd7d7;
   }
 
   .dir-main-menu {
-    background-color: #C3C1C1;
+    background-color: #c3c1c1;
   }
 
   .dir-element {
@@ -219,15 +219,15 @@
     }
 
     .toggle-icon {
-      color: $primaryColor;
       margin-right: 5px;
+      color: $primaryColor;
     }
     .toggle-icon:hover {
       cursor: pointer;
     }
     .fa-share {
-      padding-left: 5px;
       display: none;
+      padding-left: 5px;
     }
     .fa-share:hover {
       cursor: pointer;
@@ -236,11 +236,11 @@
   }
 
   .dir-main-element {
-    border-bottom: 1px solid #9E9E9E;
+    border-bottom: 1px solid #9e9e9e;
   }
   .dir-main-header {
-    font-weight: bold;
     padding: 10px;
+    font-weight: bold;
   }
   .dir-sub-element {
     padding: 10px 10px 10px 20px;
@@ -252,28 +252,28 @@
 }
 
 .popup-overlay{
-  visibility:hidden;
-  position:absolute;
-  background-color: rgba(0,0,0,.2);
-  outline: 1px solid transparent;
-  right:25%;
-  top:10%;
-  left:25%;
+  position: absolute;
+  top: 10%;
+  right: 25%;
   bottom: 10%;
+  left: 25%;
+  visibility: hidden;
+  outline: 1px solid transparent;
   border-radius: 5px;
   box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+  background-color: rgba(0,0,0,.2);
 }
 .popup-overlay.active{
-  visibility:visible;
-  text-align:center;
+  visibility: visible;
+  text-align: center;
 }
 
 .popup-content {
-  visibility:hidden;
+  visibility: hidden;
 }
 
 .popup-content.active {
-  visibility:visible;
+  visibility: visible;
 }
 
 .fa-stack {
