--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 @import '../lib/filter/filter';
 @import '../lib/bootstrap/scss/bootstrap-grid';
 @import 'homework';
@@ -6,23 +6,23 @@
 .route-homework {
   position: relative;
   .sort{
+    display: flex;
     float: left;
     margin: 10px 0 0;
-    display: flex;
     #sortselection_chosen{
-      min-width: 200px;
-      width: calc(100% - 30px) !important;
       float: left;
+      width: calc(100% - 30px) !important;
+      min-width: 200px;
     }
     #desc{
-      width: 30px;
-      padding: 0;
-      text-align:center;
-      border: none;
       margin: 0;
-      background-color: white;
+      border: zero;
+      background-color: #fff;
       cursor: pointer;
       cursor: hand;
+      padding: 0;
+      width: 30px;
+      text-align: center;
     }
   }
   .create {
@@ -35,41 +35,41 @@
       margin: 0;
     }
     @include media-breakpoint-down(xs) {
-      margin: 0;
       position: fixed;
+      right: 5vw;
+      bottom: 5vw;
       z-index: 999;
+      margin: 0;
+      border: zero;
+      border-radius: 50%;
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      padding: 16px;
       width: 56px;
       height: 56px;
-      font-size: 24px;
       line-height: 24px;
-      border: none;
-      border-radius: 50%;
-      padding: 16px;
-      bottom: 5vw;
-      right: 5vw;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      font-size: 24px;
       i {
         display: initial;
       }
       p {
-        transition: visibility 0s linear 0.3s, opacity 0.3s linear 0s;
-        opacity: 0;
-        visibility: hidden;
-
         position: absolute;
         top: 11px;
         right: 67px;
-        padding: 5px 9px;
+
+        transition: visibility 0s linear 0.3s, opacity 0.3s linear 0s;
+        visibility: hidden;
+        opacity: 0;
         border-radius: 3px;
-        font-size: 14px;
-        color: #fff;
         background-color: #212121;
+        padding: 5px 9px;
         white-space: nowrap;
+        color: #fff;
+        font-size: 14px;
       }
       &:hover p {
-        transition-delay: 0s, 0s;
-        opacity: .8;
         visibility: visible;
+        opacity: .8;
+        transition-delay: 0s, 0s;
       }
     }
   }
@@ -82,8 +82,8 @@
     left: 10px;
   }
   .disableable.disabled{
-    -webkit-filter: grayscale(100%) opacity(0.7);
     filter: grayscale(100%) opacity(0.7);
+    -webkit-filter: grayscale(100%) opacity(0.7);
   }
 }
 .tooltip .tooltip-inner{
