--- a/static/styles/lib/bootstrap/scss/_carousel.scss
+++ b/static/styles/lib/bootstrap/scss/_carousel.scss
@@ -9,8 +9,8 @@
   overflow: hidden;
 
   > .carousel-item {
-    position: relative;
     display: none;
+    position: relative;
     transition: .6s ease-in-out left;
 
     // Account for jankitude on images
@@ -23,8 +23,8 @@
     // WebKit CSS3 transforms for supported devices
     @media all and (transform-3d), (-webkit-transform-3d) {
       transition: transform .6s ease-in-out;
-      backface-visibility: hidden;
       perspective: 1000px;
+      backface-visibility: hidden;
 
       &.next,
       &.active.right {
@@ -91,12 +91,12 @@
   top: 0;
   bottom: 0;
   left: 0;
+  opacity: $carousel-control-opacity;
   width: $carousel-control-width;
-  font-size: $carousel-control-font-size;
-  color: $carousel-control-color;
   text-align: center;
   text-shadow: $carousel-text-shadow;
-  opacity: $carousel-control-opacity;
+  color: $carousel-control-color;
+  font-size: $carousel-control-font-size;
   // We can't have this transition here because WebKit cancels the carousel
   // animation if you trip this while in the middle of another animation.
 
@@ -112,24 +112,24 @@
 
   // Hover/focus state
   @include hover-focus {
-    color: $carousel-control-color;
-    text-decoration: none;
-    outline: 0;
     opacity: .9;
+    outline: 0;
+    text-decoration: none;
+    color: $carousel-control-color;
   }
 
   // Toggles
   .icon-prev,
   .icon-next {
+    display: inline-block;
     position: absolute;
     top: 50%;
     z-index: 5;
-    display: inline-block;
+    margin-top: -($carousel-icon-width / 2);
     width: $carousel-icon-width;
     height: $carousel-icon-width;
-    margin-top: -($carousel-icon-width / 2);
-    font-family: serif;
     line-height: 1;
+    font-family: serif;
   }
   .icon-prev {
     left: 50%;
@@ -163,34 +163,34 @@
   bottom: 10px;
   left: 50%;
   z-index: 15;
-  width: $carousel-indicators-width;
-  padding-left: 0;
   margin-left: -($carousel-indicators-width / 2);
-  text-align: center;
+  padding-left: 0;
+  width: $carousel-indicators-width;
   list-style: none;
+  text-align: center;
 
   li {
     display: inline-block;
-    width: $carousel-indicator-size;
-    height: $carousel-indicator-size;
     margin: 1px;
-    text-indent: -999px;
+    border: 1px solid $carousel-indicator-border-color;
+    border-radius: $carousel-indicator-size;
+    background-color: rgba(0,0,0,0);
     cursor: pointer;
     // IE9 hack for event handling
     //
     // Internet Explorer 9 does not properly handle clicks on elements with a `background-color` of `transparent`,
     // so we use `rgba(0,0,0,0)` instead since it's a non-buggy equivalent.
     // See https://developer.mozilla.org/en-US/docs/Web/Events/click#Internet_Explorer
-    background-color: rgba(0,0,0,0); // IE9
-    border: 1px solid $carousel-indicator-border-color;
-    border-radius: $carousel-indicator-size;
+    width: $carousel-indicator-size; // IE9
+    height: $carousel-indicator-size;
+    text-indent: -999px;
   }
 
   .active {
-    width: $carousel-indicator-active-size;
-    height: $carousel-indicator-active-size;
     margin: 0;
     background-color: $carousel-indicator-active-bg;
+    width: $carousel-indicator-active-size;
+    height: $carousel-indicator-active-size;
   }
 }
 
@@ -207,9 +207,9 @@
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
-  color: $carousel-caption-color;
   text-align: center;
   text-shadow: $carousel-text-shadow;
+  color: $carousel-caption-color;
 
   .btn {
     text-shadow: none; // No shadow for button elements in carousel-caption
@@ -226,9 +226,9 @@
   .carousel-control {
     .icon-prev,
     .icon-next {
+      margin-top: -($carousel-control-sm-up-size / 2);
       width: $carousel-control-sm-up-size;
       height: $carousel-control-sm-up-size;
-      margin-top: -($carousel-control-sm-up-size / 2);
       font-size: $carousel-control-sm-up-size;
     }
     .icon-prev {
