--- a/static/styles/lib/bootstrap/scss/_normalize.scss
+++ b/static/styles/lib/bootstrap/scss/_normalize.scss
@@ -7,10 +7,10 @@
 //
 
 html {
-  font-family: sans-serif; // 1
-  line-height: 1.15; // 2
-  -ms-text-size-adjust: 100%; // 3
+  line-height: 1.15; // 1
+  font-family: sans-serif; // 2
   -webkit-text-size-adjust: 100%; // 3
+  -ms-text-size-adjust: 100%; // 3
 }
 
 //
@@ -115,7 +115,7 @@ a:hover {
 //
 
 abbr[title] {
-  border-bottom: none; // 1
+  border-bottom: zero; // 1
   text-decoration: underline; // 2
   text-decoration: underline dotted; // 2
 }
@@ -152,8 +152,8 @@ dfn {
 //
 
 h1 {
-  font-size: 2em;
   margin: 0.67em 0;
+  font-size: 2em;
 }
 
 //
@@ -180,10 +180,10 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
   position: relative;
   vertical-align: baseline;
+  line-height: 0;
+  font-size: 75%;
 }
 
 sub {
@@ -243,9 +243,9 @@ figure {
 //
 
 hr {
-  box-sizing: content-box; // 1
   height: 0; // 1
-  overflow: visible; // 2
+  overflow: visible; // 1
+  box-sizing: content-box; // 2
 }
 
 // Forms
@@ -261,8 +261,8 @@ input,
 optgroup,
 select,
 textarea {
-  font: inherit; // 1
-  margin: 0; // 2
+  margin: 0; // 1
+  font: inherit; // 2
 }
 
 //
@@ -334,8 +334,8 @@ button:-moz-focusring,
 //
 
 fieldset {
-  border: 1px solid #c0c0c0;
   margin: 0 2px;
+  border: 1px solid #c0c0c0;
   padding: 0.35em 0.625em 0.75em;
 }
 
@@ -347,12 +347,12 @@ fieldset {
 //
 
 legend {
-  box-sizing: border-box; // 1
-  color: inherit; // 2
   display: table; // 1
+  padding: 0; // 2
   max-width: 100%; // 1
-  padding: 0; // 3
   white-space: normal; // 1
+  color: inherit; // 3
+  box-sizing: border-box; // 1
 }
 
 //
@@ -370,8 +370,8 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box; // 1
-  padding: 0; // 2
+  padding: 0; // 1
+  box-sizing: border-box; // 2
 }
 
 //
@@ -389,8 +389,8 @@ textarea {
 //
 
 [type="search"] {
-  -webkit-appearance: textfield; // 1
-  outline-offset: -2px; // 2
+  outline-offset: -2px; // 1
+  -webkit-appearance: textfield; // 2
 }
 
 //
@@ -407,8 +407,8 @@ textarea {
 //
 
 ::-webkit-input-placeholder {
-  color: inherit;
   opacity: 0.54;
+  color: inherit;
 }
 
 //
@@ -417,6 +417,6 @@ textarea {
 //
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; // 1
-  font: inherit; // 2
+  font: inherit; // 1
+  -webkit-appearance: button; // 2
 }
