--- a/static/styles/lib/bootstrap/scss/_progress.scss
+++ b/static/styles/lib/bootstrap/scss/_progress.scss
@@ -14,15 +14,15 @@
 
 .progress {
   display: block;
-  width: 100%;
-  height: $spacer-y; // todo: make a new var for this
   margin-bottom: $spacer-y;
+  width: 100%; // todo: make a new var for this
+  height: $spacer-y;
 }
 .progress[value] {
   // Set overall background
-  background-color: $progress-bg;
-  // Remove Firefox and Opera border
   border: 0;
+  // Remove Firefox and Opera border
+  background-color: $progress-bg;
   // Reset the default appearance
   appearance: none;
   // Set overall border radius
@@ -31,9 +31,9 @@
 
 // Filled-in portion of the bar
 .progress[value]::-ms-fill {
-  background-color: $progress-bar-color;
-  // Remove right-hand border of value bar from IE10+/Edge
   border: 0;
+  // Remove right-hand border of value bar from IE10+/Edge
+  background-color: $progress-bar-color;
 }
 .progress[value]::-moz-progress-bar {
   background-color: $progress-bar-color;
@@ -65,7 +65,7 @@ base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make thes
 }
 
 // IE9 hacks to accompany custom markup. We don't need to scope this via media queries, but I feel better doing it anyway.
-@media screen and (min-width:0\0) {
+@media screen and (min-width: 0\0) {
   .progress {
     background-color: $progress-bg;
     @include border-radius($progress-border-radius);
@@ -73,9 +73,9 @@ base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make thes
   }
   .progress-bar {
     display: inline-block;
-    height: $spacer-y;
-    text-indent: -999rem; // Simulate hiding of value as in native `<progress>`
     background-color: $progress-bar-color;
+    height: $spacer-y; // Simulate hiding of value as in native `<progress>`
+    text-indent: -999rem;
     @include border-left-radius($progress-border-radius);
   }
   .progress[width="100%"] {
@@ -101,7 +101,7 @@ base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make thes
   background-size: $spacer-y $spacer-y;
 }
 // IE9
-@media screen and (min-width:0\0) {
+@media screen and (min-width: 0\0) {
   .progress-bar-striped {
     @include gradient-striped();
     background-size: $spacer-y $spacer-y;
@@ -120,7 +120,7 @@ base::-moz-progress-bar, // Absurd-but-syntactically-valid selector to make thes
   animation: progress-bar-stripes 2s linear infinite;
 }
 // IE9
-@media screen and (min-width:0\0) {
+@media screen and (min-width: 0\0) {
   .progress-animated .progress-bar-striped {
     animation: progress-bar-stripes 2s linear infinite;
   }
