--- a/static/styles/lib/chosen/bootstrap-chosen.scss
+++ b/static/styles/lib/chosen/bootstrap-chosen.scss
@@ -6,37 +6,37 @@
 
 .chosen-container {
     display: inline-block;
-    font-size: 1rem;
     position: relative;
-    vertical-align: middle; }
+    vertical-align: middle;
+    font-size: 1rem; }
 .chosen-container .chosen-drop {
-    background: #fff;
-    border: 1px solid #ccc;
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-    margin-top: -1px;
     position: absolute;
     top: 100%;
     left: -9000px;
-    z-index: 1060; }
+    z-index: 1060;
+    margin-top: -1px;
+    border: 1px solid #ccc;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    background: #fff; }
 .chosen-container.chosen-with-drop .chosen-drop {
-    left: 0;
-    right: 0; }
+    right: 0;
+    left: 0; }
 .chosen-container .chosen-results {
-    color: #55595c;
-    margin: 0 4px 4px 0;
-    max-height: 240px;
-    padding: 0 0 0 4px;
     position: relative;
-    overflow-x: hidden;
+    margin: 0 4px 4px 0;
+    padding: 0 0 0 4px;
+    max-height: 240px;
+    color: #55595c;
+    -webkit-overflow-scrolling: touch;
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch; }
+    overflow-x: hidden; }
 .chosen-container .chosen-results li {
     display: none;
-    line-height: 1.5;
-    list-style: none;
     margin: 0;
-    padding: 5px 6px; }
+    padding: 5px 6px;
+    list-style: none;
+    line-height: 1.5; }
 .chosen-container .chosen-results li em {
     background: #feffde;
     font-style: normal; }
@@ -48,32 +48,32 @@
 .chosen-container .chosen-results li.group-option {
     padding-left: 15px; }
 .chosen-container .chosen-results li.active-result {
-    cursor: pointer;
-    display: list-item; }
+    display: list-item;
+    cursor: pointer; }
 .chosen-container .chosen-results li.highlighted {
     background-color: #0275d8;
     background-image: none;
-    color: white; }
+    color: #fff; }
 .chosen-container .chosen-results li.highlighted em {
     background: transparent; }
 .chosen-container .chosen-results li.disabled-result {
     display: list-item;
     color: #818a91; }
 .chosen-container .chosen-results .no-results {
-    background: #eceeef;
-    display: list-item; }
+    display: list-item;
+    background: #eceeef; }
 .chosen-container .chosen-results-scroll {
-    background: white;
-    margin: 0 4px;
     position: absolute;
-    text-align: center;
+    z-index: 1;
+    margin: 0 4px;
+    background: #fff;
     width: 321px;
-    z-index: 1; }
+    text-align: center; }
 .chosen-container .chosen-results-scroll span {
     display: inline-block;
+    width: 9px;
     height: 1.5;
-    text-indent: -5000px;
-    width: 9px; }
+    text-indent: -5000px; }
 .chosen-container .chosen-results-scroll-down {
     bottom: 0; }
 .chosen-container .chosen-results-scroll-down span {
@@ -82,24 +82,24 @@
     background: url("/images/chosen-sprite.png") no-repeat -22px -3px; }
 
 .chosen-container-single .chosen-single {
-    background-color: #fff;
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
-    background-clip: padding-box;
-    border: 1px solid #ccc;
-    border-top-right-radius: 0.25rem;
-    border-top-left-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-    color: #55595c;
     display: block;
+    position: relative;
+    border: 1px solid #ccc;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    background-clip: padding-box;
+    background-color: #fff;
+    padding: 0;
     height: 2.25rem;
     overflow: hidden;
-    line-height: 2.25rem;
-    padding: 0;
-    position: relative;
     text-decoration: none;
-    white-space: nowrap; }
+    line-height: 2.25rem;
+    white-space: nowrap;
+    color: #55595c;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box; }
 .chosen-container-single .chosen-single span {
     display: block;
     margin-right: 26px;
@@ -108,74 +108,74 @@
     text-overflow: ellipsis;
     white-space: nowrap; }
 .chosen-container-single .chosen-single abbr {
-    background: url("/images/chosen-sprite.png") right top no-repeat;
     display: block;
-    font-size: 1px;
-    height: 10px;
     position: absolute;
-    right: 26px;
     top: 14px;
-    width: 12px; }
+    right: 26px;
+    background: url("/images/chosen-sprite.png") right top no-repeat;
+    width: 12px;
+    height: 10px;
+    font-size: 1px; }
 .chosen-container-single .chosen-single abbr:hover {
     background-position: right -11px; }
 .chosen-container-single .chosen-single.chosen-disabled .chosen-single abbr:hover {
     background-position: right 2px; }
 .chosen-container-single .chosen-single div {
     display: block;
-    height: 100%;
     position: absolute;
     top: 2px;
     right: 0;
-    width: 18px; }
+    width: 18px;
+    height: 100%; }
 .chosen-container-single .chosen-single div b {
-    background: url("/images/chosen-sprite.png") no-repeat 0 7px;
     display: block;
-    height: 100%;
-    width: 100%; }
+    background: url("/images/chosen-sprite.png") no-repeat 0 7px;
+    width: 100%;
+    height: 100%; }
 .chosen-container-single .chosen-default span {
     color: #818a91; }
 .chosen-container-single .chosen-search {
+    position: relative;
+    z-index: 1000;
     margin: 0;
     padding: 3px 4px;
-    position: relative;
-    white-space: nowrap;
-    z-index: 1000; }
+    white-space: nowrap; }
 .chosen-container-single .chosen-search input[type="text"] {
-    background: url("/images/chosen-sprite.png") no-repeat 100% -20px, #fff;
-    border: 1px solid #ccc;
-    border-top-right-radius: 0.25rem;
-    border-top-left-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
     margin: 1px 0;
+    border: 1px solid #ccc;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    background: url("/images/chosen-sprite.png") no-repeat 100% -20px, #fff;
     padding: 4px 20px 4px 4px;
     width: 100%; }
 .chosen-container-single .chosen-drop {
     margin-top: -1px;
-    border-bottom-right-radius: 0.25rem;
     border-bottom-left-radius: 0.25rem;
-    -webkit-background-clip: padding-box;
+    border-bottom-right-radius: 0.25rem;
+    background-clip: padding-box;
     -moz-background-clip: padding;
-    background-clip: padding-box; }
+    -webkit-background-clip: padding-box; }
 
 .chosen-container-single-nosearch .chosen-search input[type="text"] {
     position: absolute;
     left: -9000px; }
 
 .chosen-container-multi .chosen-choices {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-top-right-radius: 0.25rem;
-    border-top-left-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-    cursor: text;
-    height: auto !important;
-    height: 1%;
+    position: relative;
     margin: 0;
-    overflow: hidden;
+    border: 1px solid #ccc;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
+    background-color: #fff;
+    cursor: text;
     padding: 0;
-    position: relative; }
+    height: 1%;
+    height: auto !important;
+    overflow: hidden; }
 .chosen-container-multi .chosen-choices li {
     float: left;
     list-style: none; }
@@ -184,46 +184,46 @@
     padding: 0;
     white-space: nowrap; }
 .chosen-container-multi .chosen-choices .search-field input[type="text"] {
-    background: transparent !important;
-    border: 0 !important;
-    color: #55595c;
-    height: 2.25rem;
     margin: 0;
+    outline: 0;
+    border: zero;
+    background: transparent !important;
     padding: 0.375rem 0.75rem;
-    outline: 0; }
+    height: 2.25rem;
+    color: #55595c; }
 .chosen-container-multi .chosen-choices .search-field .default {
-    color: #999;
     width: 100% !important;
+    color: #999;
 }
 .chosen-container-multi .chosen-choices .search-choice {
-    -webkit-background-clip: padding-box;
-    -moz-background-clip: padding;
+    position: relative;
+    margin: 6px 0 3px 5px;
+    border: 1px solid #ccc;
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+    border-bottom-right-radius: 0.25rem;
     background-clip: padding-box;
     background-color: #eceeef;
-    border: 1px solid #ccc;
-    border-top-right-radius: 0.25rem;
-    border-top-left-radius: 0.25rem;
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
-    background-image: linear-gradient(to bottom, white 0%, #eceeef 100%);
+    background-image: linear-gradient(to bottom, #fff 0%, #eceeef 100%);
     background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFECEEEF', GradientType=0);
-    color: #373a3c;
     cursor: default;
-    line-height: 13px;
-    margin: 6px 0 3px 5px;
     padding: 5px 20px 5px 5px;
-    position: relative; }
+    line-height: 13px;
+    color: #373a3c;
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFFFF', endColorstr='#FFECEEEF', GradientType=0); }
 .chosen-container-multi .chosen-choices .search-choice .search-choice-close {
-    background: url("/images/chosen-sprite.png") right top no-repeat;
     display: block;
-    font-size: 1px;
-    height: 10px;
     position: absolute;
-    right: 4px;
     top: 7px;
+    right: 4px;
+    background: url("/images/chosen-sprite.png") right top no-repeat;
+    cursor: pointer;
     width: 12px;
-    cursor: pointer; }
+    height: 10px;
+    font-size: 1px; }
 .chosen-container-multi .chosen-choices .search-choice .search-choice-close:hover {
     background-position: right -11px; }
 .chosen-container-multi .chosen-choices .search-choice-focus {
@@ -239,28 +239,28 @@
 .chosen-container-active .chosen-single {
     border: 1px solid #66afe9; }
 .chosen-container-active.chosen-with-drop .chosen-single {
-    background-color: #fff;
     border: 1px solid #66afe9;
+    border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0; }
+    background-color: #fff; }
 .chosen-container-active.chosen-with-drop .chosen-single div {
-    background: transparent;
-    border-left: none; }
+    border-left: zero;
+    background: transparent; }
 .chosen-container-active.chosen-with-drop .chosen-single div b {
     background-position: -18px 7px; }
 .chosen-container-active .chosen-choices {
     border: 1px solid #66afe9;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0; }
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0; }
 .chosen-container-active .chosen-choices .search-field input[type="text"] {
     color: #111 !important; }
 .chosen-container-active.chosen-with-drop .chosen-choices {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0; }
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0; }
 
 .chosen-disabled {
-    cursor: default;
-    opacity: 0.5 !important; }
+    opacity: 0.5 !important;
+    cursor: default; }
 .chosen-disabled .chosen-single {
     cursor: default; }
 .chosen-disabled .chosen-choices .search-choice .search-choice-close {
@@ -272,16 +272,16 @@
     padding: 0;
     overflow: visible; }
 .chosen-rtl .chosen-single span {
-    margin-left: 26px;
     margin-right: 0;
+    margin-left: 26px;
     padding-right: 0.75rem;
     direction: rtl; }
 .chosen-rtl .chosen-single div {
-    left: 7px;
-    right: auto; }
+    right: auto;
+    left: 7px; }
 .chosen-rtl .chosen-single abbr {
-    left: 26px;
-    right: auto; }
+    right: auto;
+    left: 26px; }
 .chosen-rtl .chosen-choices .search-field input[type="text"] {
     direction: rtl; }
 .chosen-rtl .chosen-choices li {
@@ -290,21 +290,21 @@
     margin: 6px 5px 3px 0;
     padding: 5px 5px 5px 21px; }
 .chosen-rtl .chosen-choices .search-choice .search-choice-close {
-    background-position: right top;
+    right: auto;
     left: 4px;
-    right: auto; }
+    background-position: right top; }
 .chosen-rtl.chosen-container-single .chosen-results {
     margin: 0 0 4px 4px;
     padding: 0 4px 0 0; }
 .chosen-rtl .chosen-results .group-option {
-    padding-left: 0;
-    padding-right: 15px; }
+    padding-right: 15px;
+    padding-left: 0; }
 .chosen-rtl.chosen-container-active.chosen-with-drop .chosen-single div {
-    border-right: none; }
+    border-right: zero; }
 .chosen-rtl .chosen-search input[type="text"] {
     background: url("/images/chosen-sprite.png") no-repeat -28px -20px, #fff;
-    direction: rtl;
-    padding: 4px 5px 4px 20px; }
+    padding: 4px 5px 4px 20px;
+    direction: rtl; }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-resolution: 2dppx) {
     .chosen-rtl .chosen-search input[type="text"],
@@ -315,5 +315,5 @@
     .chosen-container .chosen-results-scroll-down span,
     .chosen-container .chosen-results-scroll-up span {
         background-image: url("/images/chosen-sprite.png") !important;
-        background-size: 52px 37px !important;
-        background-repeat: no-repeat !important; } }
+        background-repeat: no-repeat !important;
+        background-size: 52px 37px !important; } }
