--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -4,14 +4,14 @@
 
 body {
     background-color: $colorWhite;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
     white-space: nowrap;
     font-size: 0 !important;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: hidden;
 }
 body > * {
-    font-size: 1rem;
     white-space: normal;
+    font-size: 1rem;
 }
 
 .preload-screen{
@@ -19,18 +19,18 @@ body > * {
     bottom: 0;
     left: 0;
     z-index: 99999999;
+    background-color: rgba(0,0,0,.4);
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    background-color: rgba(0,0,0,.4);
     .content{
         position: absolute;
         bottom: 0;
         left: 0;
+        transition: opacity .3s ease-in-out 1.3s;
+        background: radial-gradient(farthest-corner, transparent 45%, rgba(0, 0, 0, .2));
         width: 100vw;
         height: 100vh;
-        background: radial-gradient(farthest-corner, transparent 45%, rgba(0, 0, 0, .2));
-        transition: opacity .3s ease-in-out 1.3s;
         text-shadow: 2px 2px 5px rgba(0,0,0,.3);
         .center-wrapper{
             position: absolute;
@@ -41,10 +41,10 @@ body > * {
             color: #fff;
             font-size: 1.2rem;
             .fa{
-                font-size: 2em;
-                margin-bottom: 1rem;
-                -webkit-animation: fa-spin 1.5s infinite linear;
                 animation: fa-spin 1.5s infinite linear;
+                margin-bottom: 1rem;
+                font-size: 2em;
+                -webkit-animation: fa-spin 1.5s infinite linear;
             }
         }
     }
@@ -65,40 +65,40 @@ body > * {
         display: initial;
     }
     @include media-breakpoint-down(xs) {
-        display:none;
+        display: none;
     }
 }
 aside.nav-sidebar {
     position: fixed;
     top: 0;
     left: 0;
-    overflow: auto;
+    margin: 0;
+    border-right: 1px solid rgba(0,0,0,.15);
+    background-color: $colorWhite;
     width: 240px;
     height: 100vh;
-    margin: 0;
+    overflow: auto;
     color: #727272;
-    background-color: $colorWhite;
-    border-right: 1px solid rgba(0,0,0,.15);
 
     @include media-breakpoint-down(md) {
         width: 60px;
     }
 
     @include media-breakpoint-down(xs) {
+        display: block;
+        z-index: 9998;
         width: 100%;
         height: 0;
-        z-index: 9998;
         overflow: visible;
-        display: block;
     }
 
     .sc-branding {
         display: block;
-        padding: 15px;
-        font-size: 24px;
         background: $primaryColor;
-        color: whitesmoke;
+        padding: 15px;
         text-decoration: none;
+        color: #f5f5f5;
+        font-size: 24px;
         @include media-breakpoint-down(md) {
             padding: 10px;
         }
@@ -107,20 +107,20 @@ aside.nav-sidebar {
         }
         .cloud-logo {
             display: inline-block;
-            vertical-align: top;
-            width: 45px;
-            height: 30px;
-            margin-bottom: -5px;
             margin-right: 0.25rem;
+            margin-bottom: -5px;
             background: $logoBackground;
             background-size: contain;
+            width: 45px;
+            height: 30px;
+            vertical-align: top;
             @include media-breakpoint-down(md) {
-                width: 100%;
                 margin-right: 0;
+                width: 100%;
             }
             @include media-breakpoint-down(xs) {
-                width: 45px;
                 margin-right: 0;
+                width: 45px;
             }
         }
         .sc-title{
@@ -141,57 +141,57 @@ aside.nav-sidebar {
 
         @include media-breakpoint-down(xs) {
             position: absolute;
+            transform: translateY(-102%);
+            transition: transform .3s ease-in-out;
+            box-shadow: 0 2px 5px rgba(0,0,0,.26);
+            background: $colorWhite;
             width: 100%;
             height: 100vh;
             overflow: auto;
-            background: $colorWhite;
-            box-shadow: 0 2px 5px rgba(0,0,0,.26);
-            transform: translateY(-102%);
-            transition: transform .3s ease-in-out;
             .sc-branding{
-                box-sizing: border-box;
                 padding-left: 54px;
+                box-sizing: border-box;
                 .cloud-logo{
                     display: none;
                 }
             }
             &.active {
-                transition: transform .3s ease-in-out;
                 transform: none;
+                transition: transform .3s ease-in-out;
             }
         }
 
         ul {
-            width: 100%;
             float: left;
+            margin: 0;
+            padding: 0;
+            width: 100%;
             list-style-type: none;
-            padding: 0px;
-            margin: 0px;
 
             li {
-                width: 100%;
                 float: left;
+                width: 100%;
 
                 a:not(.sc-branding) {
-                    width: 100%;
                     float: left;
+                    padding: 0 20px;
+                    width: 100%;
                     height: 60px;
-                    line-height: 60px;
-                    color: $fontColor;
-                    padding: 0px 20px;
-                    font-size: 14px;
                     text-decoration: none;
-                    overflow-x: visible;
+                    line-height: 60px;
                     white-space: nowrap;
+                    color: $fontColor;
+                    font-size: 14px;
+                    overflow-x: visible;
 
                     &.child-active {
                         border-bottom: 1px solid transparent;
                     }
 
                     &.subitem {
+                        border-bottom: 1px solid transparent;
                         height: 40px;
                         line-height: 40px;
-                        border-bottom: 1px solid transparent;
 
                         .fa {
                             margin-left: 10px;
@@ -218,9 +218,9 @@ aside.nav-sidebar {
                     }
 
                     &.active {
+                        border-bottom: 1px solid transparent;
                         background: $colorWhite;
                         color: $primaryColor;
-                        border-bottom: 1px solid transparent;
                     }
 
                     &[href]:hover {
@@ -229,19 +229,19 @@ aside.nav-sidebar {
                     }
 
                     i.fa {
-                        font-size: 20px;
-                        width: 20px;
-                        margin-right: 20px;
                         display: inline-block;
-                        text-align: center;
+                        margin-right: 20px;
+                        width: 20px;
                         vertical-align: middle;
+                        text-align: center;
+                        font-size: 20px;
                     }
 
                     span {
                         display: inline-block;
                         text-transform: uppercase;
-                        font-weight: bold;
                         text-decoration: none;
+                        font-weight: bold;
 
                         @include media-breakpoint-down(md) {
                             display: none;
@@ -259,21 +259,21 @@ aside.nav-sidebar {
 .mobile-nav-toggle {
     display: none;
     position: absolute;
-    z-index: 5;
     top: 8px;
     left: 12px;
-    padding: 8px;
-    font-size: 22px;
-    line-height: 22px;
-    cursor: pointer;
     transition: transform .3s linear, z-index 0s linear .3s;
+    z-index: 5;
+    cursor: pointer;
+    padding: 8px;
+    line-height: 22px;
+    font-size: 22px;
     .fa{
         transition: color .1s linear .1s;
     }
     &.active{
-        z-index: 9999;
-        transition: transform .3s linear;
         transform: rotate(90deg);
+        transition: transform .3s linear;
+        z-index: 9999;
         .fa{
             color: #fff;
         }
@@ -284,8 +284,8 @@ aside.nav-sidebar {
 }
 
 header {
-    width:100%;
-    float:left;
+    float: left;
+    width: 100%;
 }
 
 .window-inline .content-wrapper {
@@ -293,46 +293,46 @@ header {
 }
 
 .content-min-height {
-    flex:1;
     display: flex;
+    flex: 1;
     flex-direction: column;
     width: 100%;
 
     #main-content {
-        flex:1;
         position: relative;
-        padding: 0;
-        margin-left: 15px;
+        flex: 1;
         margin-right: 15px;
+        margin-left: 15px;
+        padding: 0;
     }
 }
 
 .content-wrapper {
-    vertical-align: top;
-    width: 100%;
-    padding: 0;
-    padding-left: 240px;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    padding: 0;
+    padding-left: 240px;
+    width: 100%;
+    min-height: 100vh;
+    vertical-align: top;
 
     @include media-breakpoint-down(md) {
         padding-left: 60px;
     }
 
     @include media-breakpoint-down(xs) {
-        padding-left: 0px;
+        padding-left: 0;
     }
 
     .federal-state {
-        height: 35px;
         margin-left: 8px !important;
+        height: 35px;
     }
 
     .section-default {
-        width: 100%;
         float: left;
-        padding: 30px 0px 50px;
+        padding: 30px 0 50px;
+        width: 100%;
         line-height: 1.75rem;
 
         & + .section-default {
@@ -340,8 +340,8 @@ header {
         }
 
         h5 {
+            margin: 0 0 30px 0;
             color: $primaryColor;
-            margin: 0px 0px 30px 0px;
         }
 
     }
@@ -351,9 +351,9 @@ header {
     text-align: center;
 
     .alert-warning {
-        height: 63px;
+        border: zero;
         border-radius: 0;
-        border: none;
+        height: 63px;
     }
     p {
         padding-top: 10px;
@@ -379,23 +379,23 @@ body.fullscreen{
     }
     .topbar.navbar{
         visibility: hidden;
-        height: 0;
         padding: 0;
+        height: 0;
     }
     .content-wrapper{
-        width: 100vw;
         padding-left: 0;
+        width: 100vw;
     }
     .btn-fullscreen{
         position: fixed;
-        visibility: visible;
         top: 8px;
         right: 8px;
-        z-index: 99999;
-        color: #fff !important;
-        background-color: $secondaryColor !important;
-        opacity: .5;
         transition: all .3s ease-in-out;
+        visibility: visible;
+        opacity: .5;
+        z-index: 99999;
+        background-color: $secondaryColor !important;
+        color: #fff !important;
         &:hover{
             opacity: 1;
         }
@@ -403,15 +403,15 @@ body.fullscreen{
 }
 
 footer {
+    padding: 20px 0;
     width: 100%;
-    padding: 20px 0px;
 
     @include media-breakpoint-down(xs) {
         background: $colorBeige;
 
         img {
-            clear: both;
             display: block;
+            clear: both;
             margin: 0 auto 10px;
         }
     }
@@ -419,23 +419,23 @@ footer {
 
 .imprint {
     .center {
-        text-align: center;
         align-items: center;
+        text-align: center;
     }
 }
 
 /* ---- special --- */
 
 .section-title {
+    padding: 10px 0 20px;
     width: 100%;
-    padding: 10px 0px 20px;
     line-height: 1.75rem;
 
     h4 {
-        color: $primaryColor;
         float: left;
-        margin-bottom: 0px;
         margin-right: 20px;
+        margin-bottom: 0;
+        color: $primaryColor;
         font-weight: bold;
     }
 
@@ -456,15 +456,15 @@ footer {
         .mobile-search-toggle {
             display: none;
             float: right;
-            cursor: pointer;
-            height: 50px;
-            width: 50px;
             margin-top: -15px;
             margin-right: -10px;
-            font-size: 22px;
-            line-height: 50px;
-            text-align: center;
             cursor: pointer;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            text-align: center;
+            line-height: 50px;
+            font-size: 22px;
 
         }
 
@@ -479,9 +479,9 @@ footer {
                 display: none;
                 white-space: nowrap;
                 .search-field{
-                    width: calc(100% - 33px);
                     display: inline-block;
                     margin-top: -2px;
+                    width: calc(100% - 33px);
                 }
                 .btn-secondary{
                     float: none;
@@ -501,9 +501,9 @@ footer {
 
 @include media-breakpoint-down(xs) {
     .topbar + .section-title {
-        border-bottom: 1px solid #ddd;
-        padding: 10px 0px;
         margin-bottom: 25px;
+        border-bottom: 1px solid #ddd;
+        padding: 10px 0;
     }
 }
 
@@ -513,35 +513,35 @@ footer {
 
     @include media-breakpoint-down(xs) {
         margin-bottom: 15px;
-        padding-left: 50px !important;
-        background: $colorWhite;
         box-shadow: 0 2px 5px rgba(0,0,0,.26);
+        background: $colorWhite;
+        padding-left: 50px !important;
     }
 
     .breadcrumb {
         float: left;
-        padding: 0px;
-        margin: 0px;
+        margin: 0;
         background: transparent;
+        padding: 0;
         line-height: 46px;
     }
 
     .avatar {
-        border-radius: 50%;
-        height: 32px;
-        width: 32px;
         margin-right: 10px;
+        border-radius: 50%;
+        width: 32px;
+        height: 32px;
     }
     .dropdown-toggle{
-        border:none;
+        border: zero;
     }
     .account-toggle {
-        padding-left: 10px;
         padding-right: 10px;
+        padding-left: 10px;
     }
     .navbar-nav .nav-item {
-        float: none;
         display: inline-block;
+        float: none;
     }
     .nav-item button, .nav-link {
         line-height: 30px;
@@ -554,29 +554,29 @@ footer {
 
 .navbar-nav {
     .btn-thin {
-        padding-left: 5px!important;
-        padding-right: 5px!important;
+        padding-right: 5px !important;
+        padding-left: 5px !important;
     }
     .minimal-button{
         .dropdown-toggle{
-            padding: 10px !important;
-            border-radius: 50%;
-            border: none;
             margin-left: -.75rem;
-            text-align: center;
+            border: zero;
+            border-radius: 50%;
             background: transparent;
+            padding: 10px !important;
+            text-align: center;
             .fa{
                 display: inline-block;
-                font-size: 20px;
-                line-height: 1em;
                 width: 1em;
                 height: 1em;
+                line-height: 1em;
+                font-size: 20px;
             }
             .tag{
                 position: absolute;
-                border-radius: 50%;
                 top: 0;
-                right: 0px;
+                right: 0;
+                border-radius: 50%;
             }
 
             &:hover{
@@ -592,32 +592,32 @@ footer {
             }
         }
         .dropdown-menu{
-            padding: 0;
             left: -25px;
+            padding: 0;
             /* this CS forms the triangles */
             &:after,
             &:before {
-                content: '';
                 display: block;
                 position: absolute;
                 top: -10px;
+                border-style: solid;
                 width: 0;
                 height: 0;
-                border-style: solid;
+                content: '';
             }
             /* this border color controlls the color of the triangle (what looks like the fill of the triangle) */
             &:after {
                 left: 20px;
-                border-color: transparent transparent #fff transparent;
-                border-width: 11px;
                 margin-top: -11px;
+                border-width: 11px;
+                border-color: transparent transparent #fff transparent;
             }
             /* this border color controlls the outside, thin border */
             &:before {
                 left: 20px;
-                border-color: transparent transparent rgba(0,0,0,.15) transparent;
-                border-width: 11px;
                 margin-top: -12px;
+                border-width: 11px;
+                border-color: transparent transparent rgba(0,0,0,.15) transparent;
             }
         }
     }
@@ -632,8 +632,8 @@ footer {
 
 .notification-dropdown {
     .btn.recent i {
-        color: $primaryColor;
         margin-right: 5px;
+        color: $primaryColor;
     }
 
     .dropdown-toggle:not(.recent) .tag {
@@ -661,9 +661,9 @@ footer {
         }
 
         .notification-time {
+            display: block;
             color: #999;
             font-size: 12px;
-            display: block;
         }
     }
 }
@@ -674,12 +674,12 @@ footer {
     }
 
     .list-group-item {
-        padding-left: 15px;
-        padding-right: 15px;
         margin-bottom: 0;
-        font-size: 14px;
         border-width: 0;
         border-bottom-width: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+        font-size: 14px;
     }
 
     .link {
