--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -2,83 +2,83 @@
 
 .sc-card {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
-    max-width: 100% !important;
-    height: 100%;
+    flex-wrap: wrap;
     margin: 0;
     border-radius: 2px;
+    max-width: 100% !important;
+    height: 100%;
     overflow: hidden;
     .sc-card-header {
         display: flex;
+        position: relative;
         flex-direction: row;
         flex-wrap: nowrap;
-        position: relative;
-        min-height: 6rem;
-        padding: 1.5rem .5rem .5rem;
-        color: #fff;
-        text-decoration: none !important;
-        background-color: #70b5ce;
         border-top-left-radius: 2px;
         border-top-right-radius: 2px;
+        background-color: #70b5ce;
+        padding: 1.5rem .5rem .5rem;
+        min-height: 6rem;
+        text-decoration: none !important;
+        color: #fff;
         &::before {
-            content: " ";
             display: block;
             position: absolute;
-            z-index: 5;
             top: 0;
+            right: 0;
             bottom: 0;
             left: 0;
-            right: 0;
+            z-index: 5;
             background-image: linear-gradient(to top, rgba(0,0,0,.1) 0%, transparent 85%);
+            content: " ";
         }
         .sc-card-title {
             .title {
                 color: inherit;
             }
             align-self: flex-end;
-            font-weight: 700;
-            overflow: hidden;
             z-index: 10;
-            text-shadow: 2px 2px 5px rgba(0,0,0,.6);
             padding-right: 5px;
-            word-break: break-all;
+            overflow: hidden;
+            text-shadow: 2px 2px 5px rgba(0,0,0,.6);
+            font-weight: 700;
             word-break: break-word;
+            word-break: break-all;
         }
         .sc-card-menu {
             position: absolute;
-            right: 8px;
             top: 8px;
+            right: 8px;
             font-size: 0;
             .sc-card-menu-action {
                 display: inline-block;
-                width: 32px;
-                height: 32px;
-                padding: 0;
+                transition: all .1s ease-in-out;
+                opacity: .5;
                 margin: 0;
+                border: zero;
                 border-radius: 50%;
                 background: none;
-                border: none;
+                padding: 0;
+                width: 32px;
+                height: 32px;
+                overflow: hidden;
+                vertical-align: middle;
+                text-align: center;
+                text-decoration: none;
+                line-height: 32px;
                 color: #fff;
                 font-size: 20px;
-                text-decoration: none;
-                text-align: center;
-                vertical-align: middle;
-                line-height: 32px;
-                overflow: hidden;
-                opacity: .5;
-                transition: all .1s ease-in-out;
                 &:hover {
                     background: rgba(0,0,0,.2);
                 }
             }
             .sc-card-menu-info {
                 display: inline-block;
-                padding: 0;
                 margin: 0;
+                padding: 0;
+                overflow: hidden;
                 color: #fff;
                 font-size: 14px;
-                overflow: hidden;
             }
         }
         &:hover{
@@ -88,55 +88,55 @@
         }
     }
     .sc-card-body {
-        padding: .5rem .5rem 0rem;
-        margin: 0;
         flex: 1 1 0;
-        width: 100%;
+        margin: 0;
         border: 1px solid rgba(0,0,0,.125);
         border-top-width: 0;
         border-bottom-width: 0;
+        padding: .5rem .5rem 0;
+        width: 100%;
         p{
-            word-break: break-all;
             word-break: break-word;
+            word-break: break-all;
         }
         &:first-of-type{
+            border-top-width: 1px;
             border-top-left-radius: 2px;
             border-top-right-radius: 2px;
-            border-top-width: 1px;
         }
         &:last-of-type{
+            border-bottom-width: 1px;
             border-bottom-left-radius: 2px;
             border-bottom-right-radius: 2px;
-            border-bottom-width: 1px;
         }
     }
     .sc-card-footer {
         flex: 0 1 0;
-        width: 100%;
-        padding: .5rem;
         border: 1px solid rgba(0,0,0,.125);
         border-top-width: 0;
         border-bottom-left-radius: 2px;
         border-bottom-right-radius: 2px;
+        padding: .5rem;
+        width: 100%;
         a, button {
-            float:right;
-            color: $primaryColor;
-            border: none;
+            display: inline-block;
+            float: right;
+            transition: all .1s ease-in-out;
+            border: zero;
             border-radius: 2px;
             padding: 0 8px;
-            display: inline-block;
-            font-size: 14px;
+            text-align: center;
             text-transform: uppercase;
             text-decoration: none;
-            text-align: center;
             line-height: 36px;
-            transition: all .1s ease-in-out;
+            color: $primaryColor;
+            font-size: 14px;
             &:hover {
                 background-color: #eee;
             }
         }
         .additionalInfo {
-            float:left;
+            float: left;
         }
     }
      &:hover{
