--- a/static/styles/partner/partner.scss
+++ b/static/styles/partner/partner.scss
@@ -1,65 +1,75 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 hgroup {
-    text-align: center;
-    font-weight: bold;
-    margin: 60px 0 60px;
-    width: 100%;
+  margin: 60px 0;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
 }
 
 .section-title {
-    width: 100%;
-    line-height: 1.75rem;
-    h4 {
-        color: $primaryColor;
-        margin-bottom: 0;
-        margin-right: 20px;
-        font-weight: 700;
-    }
+  width: 100%;
+  line-height: 1.75rem;
+
+  h4 {
+    margin-right: 20px;
+    margin-bottom: 0;
+    color: $primaryColor;
+    font-weight: 700;
+  }
 }
 
 .section-partner {
-    ul {
-        color: $primaryColor;
-        padding-left: 20px;
+  ul {
+    padding-left: 20px;
+    color: $primaryColor;
+  }
+
+  .container {
+    margin-left: 0;
+  }
+
+  .intro-box {
+    padding: 0;
+  }
+
+  .partner-box-wrapper {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .partner-box {
+    border: 1px solid #d3d3d3;
+    height: 150px;
+    text-align: center;
+  }
+
+  .partner-box img {
+    position: relative;
+    /* Vertical Center */
+    top: 50%;
+    transform: translateY(-50%);
+    max-height: 100%;
+  }
+
+  .collapse.collapse.in {
+    display: flex !important;
+  }
+
+  .toggle-partner {
+    position: relative;
+    background-color: #fff;
+    color: #b10438;
+    font-weight: 500;
+
+    i {
+      display: block;
+      pointer-events: none;
     }
-    .container {
-        margin-left: 0;
-    }
-    .intro-box {
-        padding: 0;
-    }
-    .partner-box-wrapper {
-        padding-top: 15px;
-        padding-bottom: 15px;
-    }
-    .partner-box {
-        border: 1px solid lightgray;
-        height: 150px;
-        text-align: center;
-    }
-    .partner-box img {
-        max-height: 100%;
-        /* Vertical Center */
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    .collapse.collapse.in {
-        display: flex !important;
-    }
-    .toggle-partner {
-        background-color: white;
-        color: #b10438;
-        position: relative;
-        font-weight: 500;
-        i {
-            display: block;
-            pointer-events: none;
-        }
-    }
-    .buttonWrapper {
-        width: 100%;
-        text-align: center;
-    }
+  }
+
+  .buttonWrapper {
+    width: 100%;
+    text-align: center;
+  }
 }
