--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -1,138 +1,138 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 .section-team {
   .team-container {
-    box-sizing: border-box;
-    max-width: 1400px;
-    width: 100%;
-    margin: auto;
     display: flex;
     flex-wrap: wrap;
+    margin: auto;
+    width: 100%;
+    max-width: 1400px;
     height: auto;
+    box-sizing: border-box;
     @media screen and (min-width: 767px) {
       padding: 0 30px;
     }
   }
   .h-100 {
-    text-align: center;
     position: relative;
-    min-height: 350px;
     width: 100%;
+    min-height: 350px;
+    text-align: center;
   }
   .img-out {
-    padding-top: 20px;
     display: inline-block;
+    padding-top: 20px;
     text-align: center;
   }
   .circular {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    border-radius: 150px;
     max-width: 150px;
     max-height: 150px;
-    border-radius: 150px;
-    margin-bottom: 20px;
-    margin-top: 10px;
   }
   body, html {
-    min-height: 100%;
-    height: 100%;
-    background-size: cover;
     background-position: top center;
+    background-size: cover;
+    height: 100%;
+    min-height: 100%;
     font-weight: 200;
   }
   body.modal-active, html.modal-active {
     overflow: hidden;
   }
   div[id^=modal-container-] {
-    position: fixed;
     display: table;
-    height: 100%;
-    width: 100%;
+    position: fixed;
     top: 0;
     left: 0;
     transform: scale(0);
     z-index: 1;
+    width: 100%;
+    height: 100%;
     &.show {
       transform: scale(1);
       .modal-background {
+        animation: fadeIn .5s cubic-bezier(.165, .84, .44, 1) forwards;
         background: 0 0;
-        animation: fadeIn 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
         .modal {
+          animation: scaleUp .5s cubic-bezier(.165, .84, .44, 1) forwards;
           opacity: 0;
-          animation: scaleUp 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
         }
       }
       + .content {
-        animation: scaleBack 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+        animation: scaleBack .5s cubic-bezier(.165, .84, .44, 1) forwards;
       }
       &.out {
-        animation: quickScaleDown 0s 0.5s linear forwards;
+        animation: quickScaleDown 0s .5s linear forwards;
         .modal-background {
-          animation: fadeOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+          animation: fadeOut .5s cubic-bezier(.165, .84, .44, 1) forwards;
           .modal {
-            animation: scaleDown 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+            animation: scaleDown .5s cubic-bezier(.165, .84, .44, 1) forwards;
           }
         }
         + .content {
-          animation: scaleForward 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+          animation: scaleForward .5s cubic-bezier(.165, .84, .44, 1) forwards;
         }
       }
     }
     .modal-background {
       display: table-cell;
+      background: rgba(0, 0, 0, .8);
+      padding-top: 20px;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      text-align: center;
       vertical-align: middle;
-      padding-top: 20px;
+      text-align: center;
       .modal {
-        width: 100%;
         display: inline-block;
-        border-radius: 3px;
-        font-weight: 300;
         position: relative;
+        border-radius: 3px;
+        width: 100%;
+        font-weight: 300;
         h2 {
-          font-size: 25px;
-          line-height: 25px;
           margin-bottom: 15px;
+          line-height: 25px;
+          font-size: 25px;
         }
         p {
-          font-size: 18px;
           line-height: 22px;
+          font-size: 18px;
         }
       }
     }
   }
   .content {
-    min-height: 100%;
-    height: 100%;
-    background: #fff;
     position: relative;
     z-index: 0;
+    background: #fff;
+    height: 100%;
+    min-height: 100%;
     h1 {
-      padding: 75px 0 30px 0;
+      padding: 75px 0 30px;
       text-align: center;
-      font-size: 30px;
       line-height: 30px;
+      font-size: 30px;
     }
     .buttons {
-      max-width: 800px;
       margin: 0 auto;
       padding: 0;
+      max-width: 800px;
       text-align: center;
       .button {
         display: inline-block;
-        text-align: center;
-        padding: 10px 15px;
         margin: 10px;
-        background: red;
-        font-size: 18px;
-        background-color: #efefef;
         border-radius: 3px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
+        background: #f00;
+        background-color: #efefef;
         cursor: pointer;
+        padding: 10px 15px;
+        text-align: center;
+        font-size: 18px;
         &:hover {
-          color: #fff;
           background: #009bd5;
+          color: #fff;
         }
       }
     }
@@ -142,17 +142,17 @@
     padding-bottom: 15px;
   }
   .person {
-    border: 1px solid #d3d3d3;
-    height: 150px;
-    text-align: center;
     transition: all .5s;
+    border: 1px solid #d3d3d3;
     cursor: pointer;
+    height: 150px;
     overflow: hidden;
+    text-align: center;
     &:hover {
-      z-index: 1;
-      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
       transform: scale(1.05);
-      transition: box-shadow .2s ease,transform .2s ease,z-index 0s 0s ease;
+      transition: box-shadow .2s ease, transform .2s ease, z-index 0s 0s ease;
+      z-index: 1;
+      box-shadow: 0 8px 15px rgba(0, 0, 0, .2);
     }
   }
   .person-title {
@@ -160,44 +160,44 @@
     font-size: 2em;
   }
   .person-desc {
-    color: rgba(0, 0, 0, 0.4);
     margin-top: 10px;
     text-transform: uppercase;
-    font-size: .8em;
     letter-spacing: 2px;
+    color: rgba(0, 0, 0, .4);
+    font-size: .8em;
   }
   .leave {
     transform: rotateX(0) rotateY(0) !important;
-    transition-timing-function: cubic-bezier(0.42, 0, 0, 1) !important;
     transition-duration: 1.5s;
+    transition-timing-function: cubic-bezier(.42, 0, 0, 1) !important;
   }
   .modal-dialog {
-    width: 98%;
-    height: 92%;
     padding: 0;
+    width: 98%;
     max-width: 1080px !important;
+    height: 92%;
   }
   .modal-content {
     height: 99%;
   }
   .modal-body {
     max-height: calc(100vh - 210px);
-    overflow-y: auto;
     overflow-x: hidden;
+    overflow-y: auto;
   }
   .container {
     margin-left: 0;
   }
   .image {
+    border-radius: 10px;
     width: 100%;
     height: auto;
-    border-radius: 10px;
   }
 }
 .section-title h4 {
-  color: $primaryColor;
-  margin-bottom: 0;
   margin-right: 20px;
+  margin-bottom: 0;
+  color: $primaryColor;
   font-weight: 700;
 }
 
@@ -208,13 +208,13 @@
   }
 
   100% {
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, .7);
   }
 }
 
 @keyframes fadeOut {
   0% {
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, .7);
   }
 
   100% {
@@ -224,7 +224,7 @@
 
 @keyframes scaleUp {
   0% {
-    transform: scale(0.8) translateY(1000px);
+    transform: scale(.8) translateY(1000px);
     opacity: 0;
   }
 
@@ -241,7 +241,7 @@
   }
 
   100% {
-    transform: scale(0.8) translateY(1000px);
+    transform: scale(.8) translateY(1000px);
     opacity: 0;
   }
 }
@@ -252,13 +252,13 @@
   }
 
   100% {
-    transform: scale(0.85);
+    transform: scale(.85);
   }
 }
 
 @keyframes scaleForward {
   0% {
-    transform: scale(0.85);
+    transform: scale(.85);
   }
 
   100% {
@@ -268,7 +268,7 @@
 
 @media screen and (min-width: 767px) {
   .section-team .modal-content {
-    padding: 0px 50px 20px 50px;
+    padding: 0 50px 20px;
   }
 }
 
