--- a/static/styles/tools/tools.scss
+++ b/static/styles/tools/tools.scss
@@ -1,4 +1,4 @@
-@import '../lib/colors';
+@import "../lib/colors";
 
 .custom-fields {
   margin-right: 2px;
@@ -11,17 +11,17 @@
 }
 
 .lti-frame {
+  border: 1px solid #808080;
   width: 100%;
   height: 100%;
-  border: 1px solid grey;
 }
 
 // fix for kanzleramt
 .content-wrapper {
-  padding-right: 0px;
+  padding-right: 0;
 }
 
 .container-fluid {
-  padding-right: 0px;
-  padding-left: 0px;
+  padding-right: 0;
+  padding-left: 0;
 }
